lib/common_test/test/ct_error_SUITE_data/error/test/timetrap_helper.erl
-module(timetrap_helper).

-export([sleep/1]).

sleep(T) ->
    ct:sleep(T),
    ok.
